# Woom

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release-verify.yml  release.yml
apps/desktop/: package.json  svelte.config.js  vite.config.ts
apps/desktop/docs/refactor-wave-1/: README.md  baseline.md  red-lines.md  smoke-checklist.md
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/assets/skills/explore-repo/: SKILL.md
apps/desktop/src-tauri/assets/skills/review-pr/: SKILL.md
apps/desktop/src-tauri/assets/skills/summarize-changes/: SKILL.md
apps/desktop/src-tauri/binaries/: forgehold-app-aarch64-apple-darwin  forgehold-github-aarch64-apple-darwin  forgehold-jira-aarch64-apple-darwin  forgehold-memory-aarch64-apple-darwin  forgehold-sentry-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: rtk-rewrite-woom.sh  swap-binary.sh
apps/desktop/src-tauri/scripts/: fetch-rtk.sh
apps/desktop/src-tauri/sidecars/forgehold-app/: Cargo.toml
apps/desktop/src-tauri/sidecars/forgehold-app/src/: main.rs  terminal_bridge_client.rs
apps/desktop/src-tauri/sidecars/forgehold-github/: Cargo.toml
apps/desktop/src-tauri/sidecars/forgehold-github/src/: main.rs
apps/desktop/src-tauri/sidecars/forgehold-jira/: Cargo.toml
apps/desktop/src-tauri/sidecars/forgehold-jira/src/: main.rs  md_to_adf.rs
apps/desktop/src-tauri/sidecars/forgehold-memory/: Cargo.toml
apps/desktop/src-tauri/sidecars/forgehold-memory/src/: main.rs
apps/desktop/src-tauri/sidecars/forgehold-sentry/: Cargo.toml
apps/desktop/src-tauri/sidecars/forgehold-sentry/src/: main.rs
apps/desktop/src-tauri/sidecars/woom-app/: Cargo.toml
apps/desktop/src-tauri/sidecars/woom-app/src/: main.rs  terminal_bridge_client.rs  tools_overview.md
apps/desktop/src-tauri/sidecars/woom-github/: Cargo.toml
apps/desktop/src-tauri/sidecars/woom-github/src/: main.rs
apps/desktop/src-tauri/sidecars/woom-jira/: Cargo.toml
apps/desktop/src-tauri/sidecars/woom-jira/src/: main.rs
apps/desktop/src-tauri/sidecars/woom-memory/: Cargo.toml
apps/desktop/src-tauri/sidecars/woom-memory/src/: main.rs
apps/desktop/src-tauri/sidecars/woom-sentry/: Cargo.toml
apps/desktop/src-tauri/sidecars/woom-sentry/src/: main.rs
apps/desktop/src-tauri/src/: action_ipc.rs  agent.rs  bg_tasks.rs  biometry.rs  claude.rs  claude_bg.rs  claude_mcp.rs  claude_quota.rs  claudemd.rs  crash_reporting.rs  cursor.rs  cursor_mcp.rs  dw.rs  fs.rs  git.rs  github.rs  github_commands.rs  hooks.rs  jira.rs  jira_commands.rs  keychain.rs  lib.rs  library.rs  main.rs  memory_local.rs  rtk.rs  sdd.rs  sdd_action_log.rs  sdd_action_log_commands.rs  sdd_audit.rs  sdd_audit_commands.rs  sdd_frontmatter.rs  sdd_git_commands.rs  sdd_hydrate.rs  sdd_lifecycle_commands.rs  sdd_mcp_handlers.rs  sdd_md_mutators.rs  sdd_meta.rs  sdd_phase_commands.rs  sdd_phase_config.rs  (+21 more)
apps/desktop/src-tauri/src/sdd_prompts/: amend.md  phase.md  phase_implement.md  phase_plan.md  phase_verify.md  plan.md  spec.md  summary.md
apps/desktop/src/lib/: ClaudeActionCard.svelte  CommandPalette.svelte  DiffView.svelte  Editor.svelte  EditorView.svelte  FileTree.svelte  GitPanel.svelte  GithubFocusOverlay.svelte  JiraDetailPane.svelte  Markdown.svelte  Rail.svelte  RepoCodeView.svelte  Sigil.svelte  Splitter.svelte  WorktreeDiffModal.svelte  codemirrorLang.ts  data.ts  dragImage.ts  format.ts  notifications.ts  types.ts  usage.test.ts  usage.ts
apps/desktop/src/lib/actions/: focusTrap.ts
apps/desktop/src/lib/exec/: actions.ts  claude.ts
apps/desktop/src/lib/modals/: Modals.svelte
apps/desktop/src/lib/services/: agentCompact.ts  agentContext.ts  applyToAgent.ts  bugReport.ts  canvasImageInput.ts  canvasLayout.ts  canvasScreenshot.ts  diffActions.ts  dragAutoscroll.ts  editorNavigation.ts  firstTurnContext.ts  fuzzyMatch.test.ts  fuzzyMatch.ts  liveCardData.ts  mcpAlias.ts  mcpDispatch.ts  mentionAutocomplete.ts  paletteActions.ts  rtk.ts  sessionCwd.test.ts  sessionCwd.ts  sessionExport.ts  slashCommands.test.ts  slashCommands.ts  symbolOutline.ts
apps/desktop/src/lib/state/: autoMemory.svelte.ts  bgTasks.svelte.ts  canvas-helpers.ts  canvas-types.ts  canvas.svelte.ts  claudemd.svelte.ts  connectionEvents.svelte.ts  connections.svelte.ts  density.svelte.ts  drag.svelte.ts  dw.svelte.ts  editorCursors.svelte.ts  editorPrefs.svelte.ts  github-tab.svelte.ts  hooks.svelte.ts  inbox-github.ts  inbox-jira.ts  inbox-sentry.ts  inbox-shared.svelte.ts  inbox.svelte.ts  instanceNames.ts  layout.svelte.ts  library.svelte.ts  loops.svelte.ts  modals.svelte.ts  paletteMru.svelte.ts  persist.ts  pinned.svelte.ts  quota.svelte.ts  quota.test.ts  railBadges.svelte.ts  scale.svelte.ts  sdd.svelte.ts  sddPhaseFlow.ts  sdd_action_log_store.svelte.ts  sdd_commands.svelte.ts  sdd_prompts.ts  sessions.svelte.ts  sessions_disk.svelte.ts  sessions_persist_error.svelte.ts  (+12 more)
apps/desktop/src/lib/stream/: agentStream.ts  claudeStream.ts
apps/desktop/src/lib/util/: markdownDiff.ts
apps/desktop/src/lib/views/: AgentDashboard.svelte  ConnectionsView.svelte  (+8 more)
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte  actionIpcConverters.ts  agentDrop.ts  agentTurn.ts  appNavigationCanvas.ts  appNavigationInbox.ts  handleSlashCommand.ts  keyboardShortcuts.ts  mcpInputParse.ts  mcpTypeGuards.ts  modalActions.ts  page_helpers.ts  paletteActions.ts  sendClaudeMessage.ts  sessionLinks.ts  worktreeActions.ts
apps/desktop/static/: library.json
docs/: AGENTS.md  CANVAS.md  CLAUDE_PARITY.md  COMMAND_PALETTE.md  CONNECTIONS.md  EDITOR.md  FUTURE_FEATURES.md  GITHUB.md  JIRA.md  MCP.md  MVP.md  RELEASES.md  REPOS.md  ROADMAP_1.0.md  RULES.md  SENTRY.md  SPEC.md  UI.md  WORKBENCH.md
mockup/: index.html  v2.html  v3.html  v4.html  v7.html
scripts/: apply-squircle-mask.py  build-dmg.sh  build-sidecars-universal.sh  copy-sidecars.sh  make-manifest.mjs
(+137 files in other folders)
