[workspace]
members = ["sidecars/forgehold-jira", "sidecars/forgehold-github", "sidecars/forgehold-memory", "sidecars/forgehold-sentry", "sidecars/forgehold-app"]

[package]
name = "forgehold-desktop"
version = "1.0.0"
description = "Forgehold — a team-scale operating layer for developers"
authors = ["Forgehold"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "forgehold_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security-framework-sys = "2"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }
objc2-local-authentication = { version = "0.3", features = ["LAContext", "LAError", "block2"] }
block2 = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
thiserror = "2"
libc = "0.2"
notify = "8"
base64 = "0.22"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
# Terminal column — PTY-backed shell session per workbench instance.
# `portable-pty` spawns a real /bin/zsh attached to a master/slave pair;
# `parking_lot` is the cheap RwLock for the active-instance map.
portable-pty = "0.9"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
