[workspace]
members = ["sidecars/woom-jira", "sidecars/woom-github", "sidecars/woom-memory", "sidecars/woom-sentry", "sidecars/woom-app"]

[package]
name = "woom-desktop"
version = "0.1.0"
description = "Woom — a focused, warm-lit workspace for software work"
authors = ["Woom"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "woom_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security-framework-sys = "2"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }
objc2-local-authentication = { version = "0.3", features = ["LAContext", "LAError", "block2"] }
block2 = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
thiserror = "2"
libc = "0.2"
notify = "8"
base64 = "0.22"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
# Terminal solo — PTY-backed shell session for SoloTerminal.
# `portable-pty` spawns a real /bin/zsh attached to a master/slave pair;
# `parking_lot` is the cheap RwLock for the active-instance map.
portable-pty = "0.9"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
# Terminal MCP bridge — axum HTTP server on 127.0.0.1 so the
# `woom-app` sidecar (separate process spawned by Claude/Cursor)
# can drive the same PTY the user sees in SoloTerminal.
# Port is published to `<app_data>/bridge.port` for sidecar discovery.
axum = "0.8"
strip-ansi-escapes = "0.2"
# SDD (spec-driven development) — YAML frontmatter parsing for spec/plan/phase
# files in `<app_data>/sdd-workspaces/<workspace_id>/`. `serde_yaml` is on
# maintenance mode but still the de-facto standard for YAML in Rust and is
# enough for our tiny frontmatter blocks (no exotic YAML features used).
serde_yaml = "0.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
