[package]
name = "forgehold-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "forgehold-app"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
