[package]
name = "forgehold-app"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "forgehold-app"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Terminal MCP — sidecar discovers the desktop's localhost bridge via
# `<app_data>/bridge.port`, then issues HTTP requests for list / write
# / run / buffer. `dirs` resolves the platform app-data path.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
thiserror = "2"
base64 = "0.22"
