[package]
name = "woom-github"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "woom-github"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io", "schemars"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
