[package]
name = "woom-jira"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "woom-jira"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io", "schemars"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
urlencoding = "2"
# Markdown → ADF for descriptions / comments / update payloads. We feed the
# event stream through a tiny in-house translator (see md_to_adf.rs) — Jira's
# ADF schema is small enough that a full mdast → adf library would be overkill.
pulldown-cmark = { version = "0.13", default-features = false }
